{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 114,
  "lineage": "6ba06d19-63a9-6508-a416-7559b509c2c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:loadbalancer/app/iktos-lb/a86bb1f7e579e158",
            "arn_suffix": "app/iktos-lb/a86bb1f7e579e158",
            "desync_mitigation_mode": "defensive",
            "dns_name": "iktos-lb-29798601.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:loadbalancer/app/iktos-lb/a86bb1f7e579e158",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iktos-lb",
            "security_groups": [
              "sg-095653248f54c6a54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a9c3d51729584ed"
              },
              {
                "subnet_id": "subnet-0a02f4c048ac678da"
              },
              {
                "subnet_id": "subnet-0a75b3112b0f0674b"
              }
            ],
            "subnets": [
              "subnet-03a9c3d51729584ed",
              "subnet-0a02f4c048ac678da",
              "subnet-0a75b3112b0f0674b"
            ],
            "vpc_id": "vpc-05de0554017421ce0",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:876339390931:subnet/subnet-0a02f4c048ac678da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a02f4c048ac678da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "876339390931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05de0554017421ce0"
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:876339390931:subnet/subnet-03a9c3d51729584ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a9c3d51729584ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "876339390931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05de0554017421ce0"
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:876339390931:subnet/subnet-0a75b3112b0f0674b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a75b3112b0f0674b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "876339390931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05de0554017421ce0"
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:876339390931:vpc/vpc-05de0554017421ce0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-05e66b15f45ed1901",
            "default_route_table_id": "rtb-0695829efdc01ccc2",
            "default_security_group_id": "sg-01f5d14e5a1eb29bc",
            "dhcp_options_id": "dopt-0f97c39f2cd5ddfa3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05de0554017421ce0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0695829efdc01ccc2",
            "owner_id": "876339390931"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:listener/app/iktos-lb/a86bb1f7e579e158/d6ec016f3ab6cfe8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:targetgroup/target-group/ac7a72f0cdbb8c17",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:listener/app/iktos-lb/a86bb1f7e579e158/d6ec016f3ab6cfe8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:loadbalancer/app/iktos-lb/a86bb1f7e579e158",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:targetgroup/target-group/ac7a72f0cdbb8c17",
            "arn_suffix": "targetgroup/target-group/ac7a72f0cdbb8c17",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:876339390931:targetgroup/target-group/ac7a72f0cdbb8c17",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05de0554017421ce0"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:876339390931:security-group/sg-095653248f54c6a54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095653248f54c6a54",
            "ingress": [
              {
                "cidr_blocks": [
                  "176.185.234.248/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220130152750215400000001",
            "name_prefix": "terraform-",
            "owner_id": "876339390931",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05de0554017421ce0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:876339390931:security-group/sg-020b69ac2fc75efb6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020b69ac2fc75efb6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-095653248f54c6a54"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220130154726064600000001",
            "name_prefix": "terraform-",
            "owner_id": "876339390931",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05de0554017421ce0"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}